force-app/main/default/objects/Product2/fields/max_MAP_pricing__c.field-meta.xml
<CustomField>
    <fullName>max_MAP_pricing__c</fullName>
    <description>The maximum amount of units to include in the Abacus pricelist export</description>
    <inlineHelpText>The maximum amount of units to include in the Abacus pricelist export</inlineHelpText>
    <label>Max MAP Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>250</fullName>
            </value>
            <value>
                <fullName>500</fullName>
            </value>
            <value>
                <fullName>1000</fullName>
            </value>
            <value>
                <fullName>2500</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>