force-app/main/default/objects/Product2/fields/MEID__c.field-meta.xml
<CustomField>
    <fullName>MEID__c</fullName>
    <defaultValue>false</defaultValue>
    <description>(From Abacus)</description>
    <inlineHelpText>(From Abacus)</inlineHelpText>
    <label>MEID</label>
    <type>Checkbox</type>
</CustomField>