force-app/main/default/objects/Product2/fields/MFi_License_Required__c.field-meta.xml
<CustomField>
    <fullName>MFi_License_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Product requiring MFi License., can be ordered only by &quot;MFi Licensee&quot; Account</description>
    <inlineHelpText>Product requiring MFi License., can be ordered only by &quot;MFi Licensee&quot; Account</inlineHelpText>
    <label>MFi License Required</label>
    <type>Checkbox</type>
</CustomField>