force-app/main/default/objects/Product2/fields/Packaging_Size__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Size__c</fullName>
    <description>Prev. help text
Equals the Minimum Order Quantity MOQ.
In case there are several trays in a pack, use the total volume.</description>
    <inlineHelpText>(From Abacus) Packaging size</inlineHelpText>
    <label>Packaging Size</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>