force-app/main/default/objects/Product2/fields/PGM_gate_date_check__c.field-meta.xml
<CustomField>
    <fullName>PGM_gate_date_check__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checks if gate dates from Program Manager tool and Salesforce are equal in wiki PGMSalesforceMasterSchedule. After that synchronize this field with database mysql table!</inlineHelpText>
    <label>PGM gate date check</label>
    <type>Checkbox</type>
</CustomField>