force-app/main/default/objects/Product2/fields/Positioning_Engine__c.field-meta.xml
<CustomField>
    <fullName>Positioning_Engine__c</fullName>
    <label>Positioning Engine</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>u-blox A9</fullName>
            </value>
            <value>
                <fullName>u-blox D9</fullName>
            </value>
            <value>
                <fullName>u-blox F10</fullName>
            </value>
            <value>
                <fullName>u-blox F9</fullName>
            </value>
            <value>
                <fullName>u-blox M10</fullName>
            </value>
            <value>
                <fullName>u-blox M9</fullName>
                <color>#B6E32E</color>
                <label>u-blox M9</label>
            </value>
            <value>
                <fullName>u-blox M8</fullName>
                <color>#000099</color>
                <label>u-blox M8</label>
            </value>
            <value>
                <fullName>u-blox 8</fullName>
            </value>
            <value>
                <fullName>u-blox 7</fullName>
                <color>#0B6FCE</color>
                <label>u-blox 7</label>
            </value>
            <value>
                <fullName>u-blox 6</fullName>
                <color>#33CCFF</color>
                <label>u-blox 6</label>
            </value>
            <value>
                <fullName>u-blox 5</fullName>
                <color>#6600CC</color>
                <label>u-blox 5</label>
            </value>
            <value>
                <fullName>ANTARIS 4</fullName>
                <color>#CC66CC</color>
                <label>ANTARIS 4</label>
            </value>
            <value>
                <fullName>SiRF3</fullName>
            </value>
            <value>
                <fullName>SiRF4</fullName>
            </value>
            <value>
                <fullName>MTK3318</fullName>
            </value>
            <value>
                <fullName>MTK3329</fullName>
            </value>
            <value>
                <fullName>MTK3333</fullName>
            </value>
            <value>
                <fullName>MTK3339</fullName>
            </value>
            <value>
                <fullName>ST Teseo 2</fullName>
            </value>
            <value>
                <fullName>Atheros</fullName>
            </value>
            <value>
                <fullName>Various</fullName>
                <color>#FF99FF</color>
                <label>Various</label>
            </value>
            <value>
                <fullName>C&amp;P</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
                <color>#999999</color>
                <default>true</default>
                <label>Not applicable</label>
            </value>
            <value>
                <fullName>HED8020</fullName>
            </value>
            <value>
                <fullName>MTK3337</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>