force-app/main/default/objects/Product2/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <inlineHelpText>select one of the product categories</inlineHelpText>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CEL chips</fullName>
                <color>#000066</color>
                <label>CEL chips</label>
            </value>
            <value>
                <fullName>CEL modules</fullName>
                <color>#3333FF</color>
                <label>CEL modules</label>
            </value>
            <value>
                <fullName>CEL services</fullName>
                <color>#9999FF</color>
                <label>CEL services</label>
            </value>
            <value>
                <fullName>CEL MA</fullName>
                <color>#33FFFF</color>
                <label>CEL MA</label>
            </value>
            <value>
                <fullName>POS chips</fullName>
                <color>#006600</color>
                <label>POS chips</label>
            </value>
            <value>
                <fullName>POS modules</fullName>
                <color>#009900</color>
                <label>POS modules</label>
            </value>
            <value>
                <fullName>POS services</fullName>
                <color>#33CC00</color>
                <label>POS services</label>
            </value>
            <value>
                <fullName>SHO chips</fullName>
            </value>
            <value>
                <fullName>SHO modules</fullName>
                <color>#990000</color>
                <label>SHO modules</label>
            </value>
            <value>
                <fullName>SHO services</fullName>
                <color>#FF0000</color>
                <label>SHO services</label>
            </value>
            <value>
                <fullName>Antennas</fullName>
                <color>#66FF99</color>
                <label>Antennas</label>
            </value>
            <value>
                <fullName>Support tools</fullName>
                <color>#666666</color>
                <label>Support tools</label>
            </value>
            <value>
                <fullName>Internal Use Only</fullName>
                <color>#DDDDDD</color>
                <label>Internal Use Only</label>
            </value>
            <value>
                <fullName>Services PPU</fullName>
                <color>#FFFF66</color>
                <label>Services PPU</label>
            </value>
            <value>
                <fullName>Services Quota</fullName>
                <color>#FFCC66</color>
                <label>Services Quota</label>
            </value>
            <value>
                <fullName>Services Monthly Fee</fullName>
                <color>#FFCC33</color>
                <label>Services Monthly Fee</label>
            </value>
            <value>
                <fullName>Services Technical Service</fullName>
                <color>#CC9933</color>
                <label>Services Technical Service</label>
            </value>
            <value>
                <fullName>Services MQTT anywhere</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>