force-app/main/default/objects/Product2/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <formula>Id</formula>
    <label>Product Id</label>
    <type>Text</type>
</CustomField>