force-app/main/default/objects/Product2/fields/Product_Name_Type_No__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_Type_No__c</fullName>
    <description>Product Name (Type Number), used for Masterschedule Dashboard table.</description>
    <formula>Name &amp; &quot; (&quot; &amp; Type_No__c &amp; &quot;)&quot;</formula>
    <inlineHelpText>Product Name (Type Number), used for Masterschedule Dashboard table.</inlineHelpText>
    <label>Product Name (Type No)</label>
    <type>Text</type>
</CustomField>