force-app/main/default/objects/Product2/fields/Product_Owner__c.field-meta.xml
<CustomField>
    <fullName>Product_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Responsible PM</description>
    <inlineHelpText>Responsible PM</inlineHelpText>
    <label>Product Owner</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>