force-app/main/default/objects/Product2/fields/Product_Series__c.field-meta.xml
<CustomField>
    <fullName>Product_Series__c</fullName>
    <description>Product Series to define Formfactor and Platform</description>
    <inlineHelpText>Product Series to define Formfactor and Platform</inlineHelpText>
    <label>Product Series</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Center__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ACC</fullName>
            </value>
            <value>
                <fullName>ACCESS-CTRL</fullName>
            </value>
            <value>
                <fullName>ALEX-N3</fullName>
            </value>
            <value>
                <fullName>ALEX-R5</fullName>
            </value>
            <value>
                <fullName>AMY-5</fullName>
            </value>
            <value>
                <fullName>AMY-6</fullName>
            </value>
            <value>
                <fullName>ANNA-B1</fullName>
            </value>
            <value>
                <fullName>ANNA-B4</fullName>
            </value>
            <value>
                <fullName>ANN-MB</fullName>
            </value>
            <value>
                <fullName>ANN-MS</fullName>
            </value>
            <value>
                <fullName>AssistNow-Offline</fullName>
            </value>
            <value>
                <fullName>AssistNow-Online</fullName>
            </value>
            <value>
                <fullName>BMD-2</fullName>
            </value>
            <value>
                <fullName>BMD-3</fullName>
            </value>
            <value>
                <fullName>BMD-40</fullName>
            </value>
            <value>
                <fullName>BMD-44</fullName>
            </value>
            <value>
                <fullName>CAM-7</fullName>
            </value>
            <value>
                <fullName>CAM-M8</fullName>
            </value>
            <value>
                <fullName>CellLocate</fullName>
            </value>
            <value>
                <fullName>CloudLocate</fullName>
            </value>
            <value>
                <fullName>Dataflow-Node</fullName>
            </value>
            <value>
                <fullName>DES-SEC</fullName>
            </value>
            <value>
                <fullName>E2E-SEC</fullName>
            </value>
            <value>
                <fullName>ELLA-W1</fullName>
            </value>
            <value>
                <fullName>EMMY-W1</fullName>
            </value>
            <value>
                <fullName>EMMY-W2</fullName>
            </value>
            <value>
                <fullName>EVA-7</fullName>
            </value>
            <value>
                <fullName>EVA-8</fullName>
            </value>
            <value>
                <fullName>EVA-M8</fullName>
            </value>
            <value>
                <fullName>FW27</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>