force-app/main/default/objects/Product2/fields/Product_Status__c.field-meta.xml
<CustomField>
    <fullName>Product_Status__c</fullName>
    <inlineHelpText>(From Abacus) To be maintained here in Salesforce if not Linked to Abacus. NOTE: Considered and In Definition are not in Abacus.</inlineHelpText>
    <label>Product Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Considered</fullName>
            </value>
            <value>
                <fullName>In Definition</fullName>
            </value>
            <value>
                <fullName>In Development</fullName>
                <default>true</default>
                <label>In Development</label>
            </value>
            <value>
                <fullName>Prototypes</fullName>
            </value>
            <value>
                <fullName>Engineering Samples</fullName>
            </value>
            <value>
                <fullName>Production Ready</fullName>
            </value>
            <value>
                <fullName>Initial Production</fullName>
            </value>
            <value>
                <fullName>Mass Production</fullName>
            </value>
            <value>
                <fullName>End of Life</fullName>
            </value>
            <value>
                <fullName>Obsolete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>