force-app/main/default/objects/Product2/fields/Product_Text_1__c.field-meta.xml
<CustomField>
    <fullName>Product_Text_1__c</fullName>
    <description>First line of Abacus product description</description>
    <inlineHelpText>(From Abacus) First line of Abacus product description</inlineHelpText>
    <label>Product Text 1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>