force-app/main/default/objects/Product2/fields/Product_Text_3__c.field-meta.xml
<CustomField>
    <fullName>Product_Text_3__c</fullName>
    <inlineHelpText>(From Abacus) Product Text, line 3</inlineHelpText>
    <label>Product Text 3</label>
    <length>40</length>
    <type>Text</type>
</CustomField>