force-app/main/default/objects/Product2/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <inlineHelpText>Remarks concerning this products. This text is not visible on quotations.</inlineHelpText>
    <label>Remarks</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>