force-app/main/default/objects/Product2/fields/Reporting_Category__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Category__c</fullName>
    <inlineHelpText>Category used for sales reporting</inlineHelpText>
    <label>Reporting Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>u-blox A9</fullName>
            </value>
            <value>
                <fullName>u-blox D9</fullName>
            </value>
            <value>
                <fullName>u-blox F10</fullName>
            </value>
            <value>
                <fullName>u-blox F9</fullName>
                <color>#6600CC</color>
                <label>u-blox F9</label>
            </value>
            <value>
                <fullName>u-blox M10</fullName>
            </value>
            <value>
                <fullName>u-blox M9</fullName>
                <color>#9999FF</color>
                <label>u-blox M9</label>
            </value>
            <value>
                <fullName>u-blox M8</fullName>
                <color>#CC66CC</color>
                <label>u-blox M8</label>
            </value>
            <value>
                <fullName>u-blox 8</fullName>
                <color>#663366</color>
                <label>u-blox 8</label>
            </value>
            <value>
                <fullName>u-blox 7</fullName>
                <color>#993399</color>
                <label>u-blox 7</label>
            </value>
            <value>
                <fullName>u-blox 6</fullName>
                <color>#66FFFF</color>
                <label>u-blox 6</label>
            </value>
            <value>
                <fullName>u-blox 5</fullName>
                <color>#3366FF</color>
                <label>u-blox 5</label>
            </value>
            <value>
                <fullName>Antaris 4</fullName>
                <color>#330099</color>
                <label>Antaris 4</label>
            </value>
            <value>
                <fullName>GNSS various</fullName>
                <color>#AFCADF</color>
                <label>GNSS various</label>
            </value>
            <value>
                <fullName>GNSS solutions</fullName>
                <color>#78C953</color>
                <label>GNSS solutions</label>
            </value>
            <value>
                <fullName>GNSS non-UBX</fullName>
                <color>#006600</color>
                <label>GNSS non-UBX</label>
            </value>
            <value>
                <fullName>GPRS modules</fullName>
                <color>#F3D904</color>
                <label>GPRS modules</label>
            </value>
            <value>
                <fullName>HSPA modules</fullName>
                <color>#A53711</color>
                <label>HSPA modules</label>
            </value>
            <value>
                <fullName>CDMA modules</fullName>
                <color>#FFCC66</color>
                <label>CDMA modules</label>
            </value>
            <value>
                <fullName>LTE modules</fullName>
                <color>#663300</color>
                <label>LTE modules</label>
            </value>
            <value>
                <fullName>LTE chips</fullName>
                <color>#CC9933</color>
                <label>LTE chips</label>
            </value>
            <value>
                <fullName>RPMA modules</fullName>
            </value>
            <value>
                <fullName>CIoT modules</fullName>
            </value>
            <value>
                <fullName>Wireless solutions</fullName>
                <color>#FF6600</color>
                <label>Wireless solutions</label>
            </value>
            <value>
                <fullName>Bluetooth</fullName>
                <color>#660000</color>
                <label>Bluetooth</label>
            </value>
            <value>
                <fullName>Multiradio</fullName>
                <color>#CC0000</color>
                <label>Multiradio</label>
            </value>
            <value>
                <fullName>Wi-Fi</fullName>
                <color>#FF6666</color>
                <label>Wi-Fi</label>
            </value>
            <value>
                <fullName>SHO services</fullName>
                <color>#FF9966</color>
                <label>SHO services</label>
            </value>
            <value>
                <fullName>V2X</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <color>#666666</color>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>