force-app/main/default/objects/Product2/fields/ROM__c.field-meta.xml
<CustomField>
    <fullName>ROM__c</fullName>
    <inlineHelpText>ROM of the chip (for Positioning products only)</inlineHelpText>
    <label>ROM</label>
    <length>10</length>
    <type>Text</type>
</CustomField>