force-app/main/default/objects/Product2/fields/Shop_Active__c.field-meta.xml
<CustomField>
    <fullName>Shop_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Inported from Abacus (inverted &quot;Inaktiv&quot; in Produktstamm)</description>
    <inlineHelpText>(From Abacus) Activated for Online Shop. The product may not be visible (e.g. only visible in Americas or not placed in any locations).</inlineHelpText>
    <label>Shop Active</label>
    <type>Checkbox</type>
</CustomField>