force-app/main/default/objects/Product2/fields/Short_Range_Technology__c.field-meta.xml
<CustomField>
    <fullName>Short_Range_Technology__c</fullName>
    <label>Short Range Technology</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BT Classic</fullName>
            </value>
            <value>
                <fullName>BT Low Energy</fullName>
            </value>
            <value>
                <fullName>BT Dual-mode</fullName>
            </value>
            <value>
                <fullName>Wi-Fi 802.11ac</fullName>
            </value>
            <value>
                <fullName>Wi-Fi 802.11n</fullName>
            </value>
            <value>
                <fullName>802.11p</fullName>
            </value>
            <value>
                <fullName>802.15.4</fullName>
            </value>
            <value>
                <fullName>Multiradio</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
                <default>true</default>
                <label>Not applicable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>