force-app/main/default/objects/Product2/fields/Successor_Product__c.field-meta.xml
<CustomField>
    <fullName>Successor_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Most recent product version used for opportunities and quotations.</inlineHelpText>
    <label>Successor Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>